[package]
name = "about_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rand = "0.3"
anyhow = "1.0.70"
once_cell = "1.18.0"
lazy_static = "1.4"
async_once = "0.2.6"
futures = "0.3.5"
num_cpus = "1.16.0"