[package]
name = "about_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rand = "0.3"
anyhow = "1.0.70"
once_cell = "1.18.0"
lazy_static = "1.4"
async_once = "0.2.6"
futures = "0.3.5"
num_cpus = "1.16.0"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.0"
fern = {version = "0.6.2", features = ["colored"]}
log4rs = "1.2.0"
docopt = "1.1.1"
serde = "1.0.192"
serde_json = "1.0.108"
flume = { version = "0.11.0", default-features = false, features = ["async", "select"] }
reqwest = { version = "0.11.4", features = ["blocking", "json", "rustls-tls"] }