[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
primitive-types = { version = "0.12.1" }
revm = {version = "3.0.0", features = ["ethersdb", "serde", "std"]}